--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
     "roboto-fontface": "*",
+    "vee-validate": "^4.13.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-server-renderer": "^2.7.16",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
