--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "roboto-fontface": "*",
     "vee-validate": "^4.13.1",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.0.3",
     "vue-server-renderer": "^2.7.16",
     "vuetify": "^3.0.0-beta.0",
